--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,23 @@
   margin-left: 5px;
 }
 
+.container {
+  background-color: lightslategray;
+  padding: 10% 0;
+}
+
+.background-white {
+  background-color: white;
+}
+
+.container-small {
+  width: 70%;
+  margin: 0 auto;
+  padding: 30px;
+}
+
+
+
 .type-bottom {
   background-color: lightskyblue;
   margin: 5px;
@@ -27,8 +44,13 @@
  border-radius: 5px;
 }
 
-.first-title {
+.sections {
+  line-height: 30px;
+}
+
+.title-section {
   font-size: 18px;
+  line-height: 50px;
 }
 
 .check-button {
@@ -37,7 +59,31 @@
   height: 20px;
   line-height: 20px;
   text-align: center;
-  background-color: red;
-  border-style: solid green;
+  color: green;
+  background-color: white;
+  border: 1px solid green;
+  border-radius: 50%;
+}
+
+.check-button-red {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  line-height: 20px;
+  text-align: center;
+  color: red;
+  background-color: white;
+  border: 1px solid red;
+  border-radius: 50%;
+}
+
+.info-button {
+  width: 100px;
+  height: 100px;
+  line-height: 20px;
+  text-align: center;
+  color: blue;
+  background-color: blue;
+  border: 1px solid blue;
   border-radius: 50%;
 }
