--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,6 @@
   padding: 0;
 }
 
-.logo-boolean {
-}
-
 .logo-text {
   color: #051933;
   font-size: 40px;
@@ -77,13 +74,74 @@
   border-radius: 50%;
 }
 
-.info-button {
+.info-button-blue {
   width: 100px;
   height: 100px;
+  padding: 5px;
   line-height: 20px;
   text-align: center;
-  color: blue;
+  color: white;
   background-color: blue;
   border: 1px solid blue;
-  border-radius: 50%;
+  border-radius: 20%;
+}
+
+.info-button-purple {
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  line-height: 20px;
+  text-align: center;
+  color: white;
+  background-color: purple;
+  border: 1px solid purple;
+  border-radius: 20%;
+}
+
+.info-button-darkgreen {
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  line-height: 20px;
+  text-align: center;
+  color: white;
+  background-color: darkgreen;
+  border: 1px solid darkgreen;
+  border-radius: 20%;
+}
+
+.info-button-orange {
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  line-height: 20px;
+  text-align: center;
+  color: white;
+  background-color: orange;
+  border: 1px solid orange;
+  border-radius: 20%;
+}
+
+.info-button-violet {
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  line-height: 20px;
+  text-align: center;
+  color: white;
+  background-color: violet;
+  border: 1px solid violet;
+  border-radius: 20%;
+}
+
+.info-button-yellow {
+  width: 100px;
+  height: 100px;
+  padding: 5px;
+  line-height: 20px;
+  text-align: center;
+  color: white;
+  background-color: yellowgreen;
+  border: 1px solid yellowgreen;
+  border-radius: 20%;
 }
